# SiteLens

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
Docs/: ROADMAP.md
src/sitelens/: cli.py  reporter.py
src/sitelens/checks/: dns_check.py  exposed_files_check.py  headers_check.py  ssl_check.py
src/sitelens/web/: app.py  database.py
src/sitelens/web/templates/: index.html
tests/: test_database.py  test_dns_check.py  test_exposed_files_check.py  test_headers_check.py  test_reporter.py  test_ssl_check.py  test_web_app.py
